[tool.poetry]
name = "aamarpay-api-wrapper"
version = "0.1.0"
description = ""
authors = ["cluser404 <30370919+cluser404@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
